--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^5.13.1",
+    "@types/react-router-dom": "^5.3.3",
     "antd": "^5.12.8",
     "axios": "^1.6.2",
-    "@reduxjs/toolkit": "^1.9.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
-    "@tanstack/react-query": "^5.13.1"
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
