feat: 完整的前端功能实现和项目增强
- 🚀 前端完整功能实现:
  * 新增 ChatInput、ErrorBoundary、LoadingSpinner、SafetyFilter 组件
  * 实现 useAudio、useChat、useSafetyFilter 自定义 hooks
  * 添加 ParentControlPage 家长控制页面
  * 完善 Layout 和 ChatPage 组件功能
  * 新增 parentControlApi 服务

- 📦 依赖管理优化:
  * 更新 frontend package.json 和 package-lock.json
  * 添加 yarn.lock 锁定依赖版本
  * 新增 backend requirements.txt 和 requirements_min.txt

- 🔧 开发工具配置:
  * 添加 .codebuddy 开发工具配置

- ✨ 功能增强:
  * 完善音频处理 API 集成
  * 增强聊天功能的用户体验
  * 添加家长控制功能模块
  * 完善错误处理和加载状态管理

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
+    "@types/node": "^24.3.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
