--- a/backend/requirements_min.txt
+++ b/backend/requirements_min.txt
@@ -1,9 +1,10 @@
-fastapi==0.68.2
+fastapi==0.104.1
 uvicorn==0.35.0
-sqlalchemy==1.4.46
-pydantic==1.10.22
+sqlalchemy==2.0.43
+pydantic>=2.9.0,<3.0.0
 python-dotenv==1.1.1
 python-multipart==0.0.20
-pyjwt==2.8.0
-passlib==1.7.4
+PyJWT==2.8.0
+passlib[bcrypt]==1.7.4
 bcrypt==4.3.0
+starlette==0.27.0
